--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ limit-service.minimum=2
 limit-service.maximum=999
 spring.config.import=optional:configserver:http://localhost:8888
 spring.application.name=limits-service
+spring.profiles.active=dev
