--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 limit-service.minimum=2
 limit-service.maximum=999
 spring.config.import=optional:configserver:http://localhost:8888
-spring.application.name=limits-service
+spring.application.name=ActualService
 spring.profiles.active=dev
+spring.cloud.config.name=limits-service
