Move simple example to currency exchange service 	modified:   src/main/resources/application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-limit-service.minimum=2
-limit-service.maximum=999
-spring.config.import=optional:configserver:http://localhost:8888
-spring.application.name=ActualService
-spring.profiles.active=dev
-spring.cloud.config.name=limits-service
+#limit-service.minimum=2
+#limit-service.maximum=999
+#spring.config.import=optional:configserver:http://localhost:8888
+#spring.application.name=ActualService
+#spring.profiles.active=dev
+#spring.cloud.config.name=limits-service
+spring.application.name=currency-exchange
+server.port=8000
