--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.name=limits-service
 spring.application.name=currency-exchange
 server.port=8000
+spring.jpa.show-sql=true
+spring.jpa.show-ddl=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enable=true
+spring.jpa.hibernate.ddl-auto=update
