--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #limit-service.minimum=2
 #limit-service.maximum=999
-spring.config.import=optional:configserver:http://localhost:8888
 #spring.application.name=ActualService
-#spring.profiles.active=dev
+spring.profiles.active=default
 spring.cloud.config.name=limits-service
-spring.application.name=currency-exchange
+#spring.application.name=currency-exchange
 server.port=8000
 spring.jpa.show-sql=true
 spring.jpa.show-ddl=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enable=true
 spring.jpa.hibernate.ddl-auto=update
+spring.config.import=optional:configserver:http://localhost:8888
