--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.application.name=ActualService
 spring.profiles.active=default
 spring.cloud.config.name=limits-service
-#spring.application.name=currency-exchange
+spring.application.name=currency-exchange
 server.port=8000
 spring.jpa.show-sql=true
 spring.jpa.show-ddl=true
@@ -11,3 +11,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enable=true
 spring.jpa.hibernate.ddl-auto=update
 spring.config.import=optional:configserver:http://localhost:8888
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
