Add env props in deployment 	modified:   deployment-cc.yaml

--- a/deployment-cc.yaml
+++ b/deployment-cc.yaml
@@ -26,9 +26,9 @@ spec:
         - image: in28min/mmv2-currency-conversion-service:0.0.12-SNAPSHOT
           imagePullPolicy: IfNotPresent
           name: mmv2-currency-conversion-service
-          env:
-            - name: CURRENCY_EXCHANGE_URI
-              value: http://currency-exchange
+          envFrom:
+            - configMapRef:
+                name:currency0conversion
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
